modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-host-paths/test_samples/constraint_templates/pss_baseline/001-allowed-no-hostpath-volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-no-hostpath-volumes
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
