modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-host-paths/test_samples/constraint_templates/pss_baseline/002-disallowed-hostpath-etc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-hostpath-etc
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: etc-volume
          mountPath: /host-etc
  volumes:
    - name: etc-volume
      hostPath:
        path: /etc
