modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-host-paths/test_samples/constraint_templates/pss_baseline/005-disallowed-multiple-volumes-one-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-multiple-volumes-one-hostpath
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: proc-volume
          mountPath: /host-proc
  volumes:
    - name: config-volume
      configMap:
        name: my-config
    - name: proc-volume
      hostPath:
        path: /proc
