modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-host-paths/test_samples/constraint_templates/security_policy/007-allowed-proc-ro-readonly.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-proc-ro-readonly
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: proc-volume
          mountPath: /host-proc
          readOnly: true
  volumes:
    - name: proc-volume
      hostPath:
        path: /proc/ro
