modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-host-paths/test_samples/constraint_templates/security_policy/009-allowed-proc-rw-readwrite.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-proc-rw-readwrite
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: proc-volume
          mountPath: /host-proc
          readOnly: false
  volumes:
    - name: proc-volume
      hostPath:
        path: /proc/rw
