modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-host-paths/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-host-paths
tests:
- name: pss-baseline
  template: ../../templates/security/allowed-host-paths.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 001-allowed-no-hostpath-volumes
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/001-allowed-no-hostpath-volumes.yaml
    assertions:
    - violations: 'no'
  - name: 004-disallowed-hostpath-proc
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/004-disallowed-hostpath-proc.yaml
    assertions:
    - violations: 'yes'
  - name: 003-disallowed-hostpath-proc-ro
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/003-disallowed-hostpath-proc-ro.yaml
    assertions:
    - violations: 'yes'
  - name: 002-disallowed-hostpath-etc
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/002-disallowed-hostpath-etc.yaml
    assertions:
    - violations: 'yes'
  - name: 005-disallowed-multiple-volumes-one-hostpath
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/005-disallowed-multiple-volumes-one-hostpath.yaml
    assertions:
    - violations: 'yes'
- name: security-policy
  template: ../../templates/security/allowed-host-paths.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 006-allowed-no-hostpath-volumes
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/006-allowed-no-hostpath-volumes.yaml
    assertions:
    - violations: 'no'
  - name: 009-allowed-proc-rw-readwrite
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/009-allowed-proc-rw-readwrite.yaml
    assertions:
    - violations: 'no'
  - name: 010-allowed-proc-rw-subpath-readwrite
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/010-allowed-proc-rw-subpath-readwrite.yaml
    assertions:
    - violations: 'no'
  - name: 007-allowed-proc-ro-readonly
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/007-allowed-proc-ro-readonly.yaml
    assertions:
    - violations: 'no'
  - name: 008-allowed-proc-rw-readonly
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/008-allowed-proc-rw-readonly.yaml
    assertions:
    - violations: 'no'
  - name: 013-disallowed-proc-ro-readwrite
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/013-disallowed-proc-ro-readwrite.yaml
    assertions:
    - violations: 'yes'
  - name: 012-disallowed-proc-not-allowed-prefix
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/012-disallowed-proc-not-allowed-prefix.yaml
    assertions:
    - violations: 'yes'
  - name: 011-disallowed-etc-path
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/011-disallowed-etc-path.yaml
    assertions:
    - violations: 'yes'
- name: security-policy-with-exception
  template: ../../templates/security/allowed-host-paths.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 016-020-allowed-by-exception-proc-etc-readwrite
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/016-allow-proc-etc.yaml
    object: test_samples/security_policy_exceptions/pods/020-allowed-by-exception-proc-etc-readwrite.yaml
    assertions:
    - violations: 'no'
  - name: 015-019-allowed-by-exception-multiple-paths
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/015-allow-multiple-paths.yaml
    object: test_samples/security_policy_exceptions/pods/019-allowed-by-exception-multiple-paths.yaml
    assertions:
    - violations: 'no'
  - name: 016-022-disallowed-by-exception-path-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/016-allow-proc-etc.yaml
    object: test_samples/security_policy_exceptions/pods/022-disallowed-by-exception-path-mismatch.yaml
    assertions:
    - violations: 'yes'
  - name: 016-023-disallowed-by-exception-readonly-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/016-allow-proc-etc.yaml
    object: test_samples/security_policy_exceptions/pods/023-disallowed-by-exception-readonly-mismatch.yaml
    assertions:
    - violations: 'yes'
  - name: 024-disallowed-no-exception-label
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/024-disallowed-no-exception-label.yaml
    assertions:
    - violations: 'yes'
  - name: 016-018-allowed-by-exception-mismatch-but-constraint-allows
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/016-allow-proc-etc.yaml
    object: test_samples/security_policy_exceptions/pods/018-allowed-by-exception-mismatch-but-constraint-allows.yaml
    assertions:
    - violations: 'no'
  - name: 016-021-disallowed-by-exception-multiple-volumes-one-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/016-allow-proc-etc.yaml
    object: test_samples/security_policy_exceptions/pods/021-disallowed-by-exception-multiple-volumes-one-mismatch.yaml
    assertions:
    - violations: 'yes'
  - name: 017-025-disallowed-by-exception-empty-spec
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/017-empty-spec.yaml
    object: test_samples/security_policy_exceptions/pods/025-disallowed-by-exception-empty-spec.yaml
    assertions:
    - violations: 'yes'
